--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
+    "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-sanity": "7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "sanity": "3",
-    "styled-components": "6"
+    "styled-components": "6",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@portabletext/react": "^3.0.11",
