--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-sanity": "7",
+    "next-themes": "^0.2.1",
     "react": "^18",
+    "react-audio-play": "^0.0.18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-parallax-mouse": "^2.1.0",
+    "react-type-animation": "^3.2.0",
     "sanity": "3",
     "styled-components": "6",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.1",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
