--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
     "class-variance-authority": "^0.7.0",
@@ -30,7 +31,8 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@portabletext/react": "^3.0.11",
