--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "sanity": "3",
     "styled-components": "6",
     "swiper": "^11.0.5",
+    "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
-    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
@@ -41,6 +41,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
